--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favic.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muraja</title>
+    <title>Ayaturrahman</title>
   </head>
   <body>
     <div id="root"></div>
